# code-snippet

./: README.md
JavaScript/: ajax.js  base.js  kv_store.js  select2.js
JavaScript/webpack/: README.md  entry.js  package.json  webpack.config.js
Python/utils/: profiler.py  seq_creater.py
Python3/: except_stack.py  singleton.py
Python3/utils/: datetime_ext.py  logger.py  mailer.py
cpp/kit/: .gitignore  Makefile.am  README.md  autoclean.sh  autogen.sh  configure.ac  gen_tags.sh
cpp/kit/kit/: Makefile.am  any.cpp  any.h  assert.h  channel.h  composite_key.cpp  composite_key.h  date_time.cpp  date_time.h  delegate.cpp  delegate.h  entry_index.cpp  entry_index.h  entry_manager.cpp  entry_manager.h  file_channel.cpp  file_channel.h  global_def.h  guid_gen.cpp  guid_gen.h  logger.cpp  logger.h  mmap_data.cpp  mmap_data.h  mmap_vector.cpp  mmap_vector.h  net_addr.cpp  net_addr.h  non_copyable.h  object_factory.h  object_pool.h  random.h  signal_hook.cpp  signal_hook.h  singleton.h  socket.cpp  socket.h  thread.cpp  thread.h  utility.h
cpp/kit/tests/: .gitignore  Makefile.am  main.cpp
go/tour/: README.md  append.go  basic-types.go  constants.go  default-selection.go  defer-multi.go  defer.go  empty-interface.go  exercise-fibonacci-closure.go  exercise-loops-and-functions.go  exercise-slices.go  exercise-stringer.go  exported-names.go  for-continued.go  for.go  functions-continued.go  images.go  imports.go  interfaces.go  making-slices.go  methods-pointers.go  multiple-results.go  mutex-counter.go  named-results.go  nil-interface-values.go  package.go  pointers.go  (+12 more)
(+5 files in other folders)
