
SOURCES = \
		any.cpp \
		guid_gen.cpp \
		date_time.cpp \
		file_channel.cpp \
		logger.cpp \
		thread.cpp \
		mmap_data.cpp \
		mmap_vector.cpp \
		random.cpp \
		entry_index.cpp \
		entry_manager.cpp \
		composite_key.cpp \
		object_pool.cpp \
		object_factory.cpp \
		delegate.cpp \
		net_addr.cpp \
		signal_hook.cpp \
		socket.cpp

noinst_LIBRARIES = libkit.a

libkit_a_SOURCES = $(SOURCES)
